# rust_voxel_engine

./: Untitled-2023-02-18-0120.excalidraw  renderdoc.cap
engine/: Cargo.toml
engine/src/: buffer.rs  camera.rs  input_functions.rs  keybinds.rs  lib.rs  math.rs  renderer.rs  shader.rs  texture.rs  texture_atlas.rs  window.rs
game/: Cargo.toml  triangle.frag  triangle.vert
game/benches/: test.rs
game/src/: block.rs  chunk.rs  data.rs  main.rs  noise.rs  player.rs  world.rs
