[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-mesh = "0.2.0"
engine = {path = "../engine", version = "0.1.0"}
gl = "0.14.0"
image = "0.24.5"
noise = {version = "0.8.2", features = ["images"]}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "test"
harness = false
